# orthority

./: .style.yapf  LICENSE  README.md  README.rst  config.yaml  config.yml  meta.yaml  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: install-test-conda-forge.yml  install-test-pypi.yml  install-test-testpypi.yml  publish-pypi.yml  publish-testpypi.yml  run-unit-tests.yml  run-unit-tests_conda-forge.yml  run-unit-tests_pypi.yml
data/inputs/test_example/: 3324c_2015_1004_05_0182_RGB.tif  3324c_2015_1004_05_0184_RGB.tif  3324c_2015_1004_06_0251_RGB.tif  3324c_2015_1004_06_0253_RGB.tif  camera_pos_ori.txt  config.yaml  dem.tif
docs/: conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  shared.txt
docs/api/: camera.rst  enums.rst  errors.rst  exif.rst  factory.rst  fit.rst  index.rst  io.rst  ortho.rst  pan_sharp.rst  param_io.rst
docs/background/: camera_models.rst  coordinates.rst  dem.rst  index.rst  models.rst  path_uri.rst  vertical_crs.rst
docs/cli/: exif.rst  frame.rst  index.rst  odm.rst  ortho.rst  oty.rst  rpc.rst  sharpen.rst  simple_ortho.rst
docs/file_formats/: csv.rst  exif_xmp.rst  geojson.rst  image_gcps.rst  image_rpc.rst  index.rst  legacy.rst  opensfm.rst  oty_ext.rst  oty_gcps.rst  oty_int.rst  oty_rpc.rst  yaml.rst  yaml_rpc.rst
docs/getting_started/: index.rst
docs/getting_started/api/: camera.rst  index.rst  ortho.rst  pan_sharp.rst
docs/getting_started/cli/: algorithm_config.rst  basic_orthorectification.rst  camera_config.rst  exif.rst  file_io.rst  frame.rst  index.rst  model_export.rst  odm.rst  ortho_config.rst  orthorectification.rst  pan_sharpening.rst  rpc.rst  running_examples.rst  shared.txt  sharp_config.rst  sharpen.rst
docs/scripts/: api_frame.py  api_getting_started.py  api_ortho.py  api_pan_sharp.py  api_rpc.py  create_alpha_plot.py
orthority/: __init__.py  camera.py  cli.py  common.py  enums.py  errors.py  exif.py  factory.py  fit.py  io.py  ortho.py  pan_sharp.py  param_io.py  utils.py  version.py
scripts/: __init__.py  batch_ortho_im.py  batch_recompress.bat  batch_unrotate_recompress.bat  odm_to_pci.py  odm_to_simple_ortho.py  ortho_im.py  test.py  test_ortho.py
simple_ortho/: __init__.py  camera.py  cli.py  command_line.py  enums.py  errors.py  exif.py  io.py  ortho.py  simple_ortho.py  utils.py
tests/: __init__.py  conftest.py  downsample_im.py  exif_to_simple_ortho.py  odm_to_pci.py  odm_to_simple_ortho.py  test_camera.py  test_cli.py  test_command_line.py  test_common.py  test_exif.py  test_factory.py  test_fit.py  test_io.py  test_ortho.py  test_pan_sharp.py  test_param_io.py  test_scripts.py  test_simple_ortho.py  test_utils.py
tests/data/: create_test_data.py
tests/data/io/: 100_0005_0140.tif  ngi_ext_param.geojson  ngi_int_param.yaml  ngi_xyz_opk.csv  ngi_xyz_opk.prj  odm_lla_rpy.csv  odm_xyz_opk.csv
tests/data/ngi/: 3324c_2015_1004_05_0182_RGB.tif  3324c_2015_1004_05_0184_RGB.tif  3324c_2015_1004_06_0251_RGB.tif  3324c_2015_1004_06_0253_RGB.tif  camera_pos_ori.txt  config.yaml  dem.tif
tests/data/odm/images/: 100_0005_0018.tif  100_0005_0136.tif  100_0005_0140.tif  100_0005_0142.tif
tests/data/odm/odm_dem/: dsm.tif
tests/data/odm/opensfm/: reconstruction.json
tests/data/pan_sharp/: ms.tif  pan.tif
tests/data/rpc/: gcps.geojson  qb2_basic1b.tif  rpc_param.yaml
