[project]
name = 'orthority'
description = 'Orthorectification of drone and aerial imagery.'
readme = 'README.md'
requires-python = '>=3.8'
dependencies = [
    'rasterio>=1.3.6',
    'opencv-python-headless>=4.8',
    'pyyaml>=5',
    'click>=8',
    'tqdm>=4'
]
authors = [{name = 'Leftfield Geospatial'}]
license = {text = 'Apache-2.0'}
keywords = ['orthorectify', 'georeference', 'drone', 'aerial', 'exif']
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
dynamic = ['version']

[project.scripts]
oty = 'orthority.cli:cli'
simple-ortho = 'orthority.cli:simple_ortho'

[project.optional-dependencies]
test = ['pytest']

[project.urls]
Homepage = 'https://github.com/leftfield-geospatial/simple-ortho'
Changelog = 'https://github.com/leftfield-geospatial/simple-ortho/releases'
Issues = 'https://github.com/leftfield-geospatial/simple-ortho/issues'

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['orthority']

[tool.setuptools.dynamic]
version = {attr = 'orthority.version.__version__'}
